User logout, account deletion, server-side validation